--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="section">
+    <header>
       <div class="container header-nav">
-      <nav>
-        
         <a href="" class="logo-head"><span>Web</span>Studio</a>
 
         <ul class="list head-nav">
@@ -46,7 +44,6 @@
           <a href="" class="head-contacts-link">+38 096 111 11 11</a>
         </li>
       </ul>
-    </nav>
     </div>
     </header>
     <main>
