--- a/portfolio.html
+++ b/portfolio.html
@@ -21,30 +21,33 @@
   </head>
   <body>
     <header>
-      <nav>
+      <div class="container header-nav">
         <a href="" class="logo-head"><span>Web</span>Studio</a>
 
         <ul class="list head-nav">
-          <li>
+          <li class="head-nav-list">
             <a href="./index.html" class="head-nav-link">Студия</a>
           </li>
-          <li>
-            <a href="./portfolio.html" class="current-page head-nav-link"
-              >Портфолио</a
-            >
+          <li class="head-nav-list">
+            <a href="./portfolio.html" class="current-page head-nav-link">Портфолио</a>
           </li>
-          <li>
+          <li class="head-nav-list">
             <a href="" class="head-nav-link">Контакты</a>
           </li>
         </ul>
-      </nav>
+      
       <ul class="head-contacts list">
-        <li><a href="" class="head-contacts-link">info@devstudio.com</a></li>
-        <li><a href="" class="head-contacts-link">+38 096 111 11 11</a></li>
+        <li class="head-contacts-list">
+          <a href="" class="head-contacts-link">info@devstudio.com</a>
+        </li>
+        <li class="head-contacts-list">
+          <a href="" class="head-contacts-link">+38 096 111 11 11</a>
+        </li>
       </ul>
+    </div>
     </header>
     <main>
-      <section class="section">
+      <section >
         <div class="container">
           <ul class="page-nav">
             <li class="page-nav-list">
@@ -69,81 +72,81 @@
         <div class="container">
           <ul class="card-list">
             <li class="card">
+               <div class="card-rede">
               <a href="" class="card-link">
                 <img src="./images/portfolio1.jpg" alt="" width="370" />
-                <div class="card-rede">
                   <h2 class="card-title">Технокряк</h2>
                   <p class="card-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="card">
+              <div class="card-rede">
               <a href="" class="card-link">
                 <img src="./images/portfolio2.jpg" alt="" width="370" />
-                <div class="card-rede">
                   <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
                   <p class="card-text">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="card">
+              <div class="card-rede">
               <a href="" class="card-link">
                 <img src="./images/portfolio3.jpg" alt="" width="370" />
-                <div class="card-rede">
                   <h2 class="card-title">Ресторан Seafood</h2>
                   <p class="card-text">Приложение</p>
                 </div>
               </a>
             </li>
             <li class="card">
+              <div class="card-rede">
               <a href="" class="card-link">
                 <img src="./images/portfolio4.jpg" alt="" width="370" />
-                <div class="card-rede">
                   <h2 class="card-title">Проект Prime</h2>
                   <p class="card-text">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="card">
+               <div class="card-rede">
               <a href="" class="card-link">
                 <img src="./images/portfolio5.jpg" alt="" width="370" />
-                <div class="card-rede">
                   <h2 class="card-title">Проект Boxes</h2>
                   <p class="card-text">Приложение</p>
                 </div>
               </a>
             </li>
             <li class="card">
+               <div class="card-rede">
               <a href="" class="card-link">
                 <img src="./images/portfolio6.jpg" alt="" width="370" />
-                <div class="card-rede">
                   <h2 class="card-title">Inspiration has no Borders</h2>
                   <p class="card-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="card">
+              <div class="card-rede">
               <a href="" class="card-link">
                 <img src="./images/portfolio7.jpg" alt="" width="370" />
-                <div class="card-rede">
                   <h2 class="card-title">Издание Limited Edition</h2>
                   <p class="card-text">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="card">
+              <div class="card-rede">
               <a href="" class="card-link">
                 <img src="./images/portfolio8.jpg" alt="" width="370" />
-                <div class="card-rede">
                   <h2 class="card-title">Проект LAB</h2>
                   <p class="card-text">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="card">
+              <div class="card-rede">
               <a href="" class="card-link">
                 <img src="./images/portfolio9.jpg" alt="" width="370" />
-                <div class="card-rede">
                   <h2 class="card-title">Growing Business</h2>
                   <p class="card-text">Приложение</p>
                 </div>
