--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     </header>
     <main>
-      <section class="hero section">
+      <section class="hero">
         <div class="hero-content container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="hero-button">Заказать услугу</button>
@@ -165,7 +165,7 @@
       </div>
       </section>
     </main>
-    <footer class=" section">
+    <footer >
       <div class="container">
       <a href="" class="footer-logo"><span>Web</span>Studio</a>
       <address>
