--- a/portfolio.html
+++ b/portfolio.html
@@ -156,7 +156,7 @@
         </div>
       </section>
     </main>
-    <footer class="section">
+    <footer>
       <div class="container">
         <a href="" class="footer-logo"><span>Web</span>Studio</a>
         <address>
