fixed after remarks

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
       <div class="container header-nav">
         <a href="" class="logo-head"><span>Web</span>Studio</a>
-
+        <nav>
         <ul class="list head-nav">
           <li class="head-nav-list">
             <a href="./index.html" class="current-page head-nav-link">Студия</a>
@@ -35,7 +35,7 @@
             <a href="" class="head-nav-link">Контакты</a>
           </li>
         </ul>
-      
+      </nav>
       <ul class="head-contacts list">
         <li class="head-contacts-list">
           <a href="" class="head-contacts-link">info@devstudio.com</a>
