--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="section">
         <div class="container">
           <ul class="page-nav">
             <li class="page-nav-list">
